--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gatsby-source-filesystem": "^4.9.0",
     "gatsby-transformer-csv": "^4.9.0",
     "gatsby-transformer-sharp": "^4.9.0",
+    "json2csv": "^5.0.7",
     "prop-types": "^15.8.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
